crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_nested_blocks_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..38
  BLOCK_QUOTE@0..38
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..20
      HTML_BLOCK_TAG@2..8
        TEXT@2..7 "<div>"
        NEWLINE@7..8 "\n"
      HTML_BLOCK_CONTENT@8..20
        LINE_PREFIX@8..9 ">"
        LINE_PREFIX@9..10 " "
        TEXT@10..19 "# heading"
        NEWLINE@19..20 "\n"
    BLOCK_QUOTE_MARKER@20..21 ">"
    BLANK_LINE@21..22
      BLANK_LINE@21..22 "\n"
    BLOCK_QUOTE_MARKER@22..23 ">"
    WHITESPACE@23..24 " "
    PARAGRAPH@24..31
      TEXT@24..28 "para"
      NEWLINE@28..29 "\n"
      LINE_PREFIX@29..30 ">"
      LINE_PREFIX@30..31 " "
    HTML_BLOCK@31..38
      HTML_BLOCK_TAG@31..38
        TEXT@31..37 "</div>"
        NEWLINE@37..38 "\n"
