crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_blockquote_nested_blocks_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..38
  BLOCK_QUOTE@0..38
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..38
      HTML_BLOCK_TAG@2..8
        TEXT@2..6 "<div"
        TEXT@6..7 ">"
        NEWLINE@7..8 "\n"
      HEADING@8..20
        ATX_HEADING_MARKER@8..11
          LINE_PREFIX@8..9 ">"
          LINE_PREFIX@9..10 " "
          ATX_HEADING_MARKER@10..11 "#"
        WHITESPACE@11..12 " "
        HEADING_CONTENT@12..19
          TEXT@12..19 "heading"
        NEWLINE@19..20 "\n"
      BLANK_LINE@20..22
        LINE_PREFIX@20..21 ">"
        BLANK_LINE@21..22 "\n"
      PARAGRAPH@22..29
        LINE_PREFIX@22..23 ">"
        LINE_PREFIX@23..24 " "
        TEXT@24..28 "para"
        NEWLINE@28..29 "\n"
      HTML_BLOCK_TAG@29..38
        LINE_PREFIX@29..30 ">"
        LINE_PREFIX@30..31 " "
        TEXT@31..37 "</div>"
        NEWLINE@37..38 "\n"
